gatekeeper/required-namespace/non-default-ns-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: namespaced-pod
  namespace: test
spec:
  containers:
  - name: container
    image: gcr.io/google-samples/node-hello:1.0
    securityContext:
      allowPrivilegeEscalation: false
      readOnlyRootFilesystem: true
      capabilities:
        drop:
          - all
