gatekeeper/required-namespace/test-exclusion-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-exclusion
spec:
  containers:
  - name: capable-container
    image: gcr.io/google-samples/node-hello:1.0
    securityContext:
      allowPrivilegeEscalation: false
      readOnlyRootFilesystem: true
      capabilities:
        drop:
          - all
